[package]
name = "enthropic"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "enthropic"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chacha20poly1305 = "0.10"
rand = "0.8"
colored = "2"
anyhow = "1"
