[project]
name = "enthropic"
version = "0.1.0"
description = "Toolkit for the Enthropic specification format"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "cryptography>=42",
]

[project.scripts]
enthropic = "enthropic.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
